# OPNs_Project

./: .gitignore  AI_module.md  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/ai/: __init__.py  privacy_guard.py
backend/app/api/: ai.py  ai_config.py  auth.py  datasets.py  evaluation.py  models.py  predictions.py  reports.py
backend/app/db_models/: __init__.py  ai_config.py  ai_field.py  ai_privacy.py  ai_report.py  dataset.py  dataset_context.py  ml_model.py  prediction.py  report.py  user.py
backend/app/ml/: __init__.py  evaluator.py  feature_mapper.py  opns_transformer.py  pairing_strategy.py  predictor.py  trainer.py
backend/app/schemas/: ai_field_schema.py  ai_schema.py  auth_schema.py  dataset_context_schema.py  dataset_schema.py  evaluation_schema.py  model_schema.py  prediction_schema.py  report_schema.py
backend/app/services/: ai_analysis_service.py  ai_config_service.py  auth_service.py  dataset_context_service.py  dataset_service.py  evaluation_service.py  prediction_service.py  report_service.py  training_service.py
backend/app/utils/: file_utils.py  igan_fields.py  security.py
backend/tests/: test_ai_analysis_llm.py  test_ai_config_security.py  test_auth_security.py  test_dataset_charts.py  test_opns_training.py  test_report_schema.py
docs/: development_log.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: ai.ts  auth.ts  datasets.ts  (+4 more)
(+58 files in other folders)
